<resources>
    <string name="app_name">GeoQuizViewModel</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="button_next">Next</string>
    <string name="button_prev">Prev</string>
    <string name="question_australia">Canberra is the capital of Australia 1</string>
    <string name="question_oceans">The pacific Ocean is larger than the Atlantic Ocean 2.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean 3.</string>
    <string name="question_africa">The source of the Nile River is in Egypt 4.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas 5.</string>
    <string name="question_asia">Lake Baiikalis the world\'s oldest and deepest freshwater lake 6.</string>
</resources>